src/core-crm/objects/Student_Sanction__c/Student_Sanction__c.object-meta.xml
<CustomObject>
    <description>Contains Sanction data applied to student or student program</description>
    <label>Student Sanction</label>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Student Sanction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Sanctions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>