src/core-crm/objects/Student_Sanction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student the Sanction is issued to</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Sanctions</relationshipLabel>
    <relationshipName>Student_Sanctions</relationshipName>
    <type>Lookup</type>
</CustomField>