src/core-crm/objects/Student_Sanction__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QUT Course the sanction is associated to</description>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Student Sanctions</relationshipLabel>
    <relationshipName>Student_Sanctions</relationshipName>
    <type>Lookup</type>
</CustomField>