src/core-crm/objects/Student_Sanction__c/fields/QUT_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Student_ID__c</fullName>
    <description>Unique student Id assigned by student administration system.</description>
    <label>QUT Student ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>