src/core-crm/objects/Student_Sanction__c/fields/Sanction__c.field-meta.xml
<CustomField>
    <fullName>Sanction__c</fullName>
    <description>Description of the Sanction associated to the student</description>
    <label>Sanction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>