src/core-crm/objects/Student_Sanction__c/fields/Sanction_Code__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Code__c</fullName>
    <description>The Sanction Code for the associated Sanction</description>
    <label>Sanction Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>