src/core-crm/objects/Student_Sanction__c/fields/Sanction_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_End_Date__c</fullName>
    <description>The date the sanction was removed</description>
    <label>Sanction End Date</label>
    <type>Date</type>
</CustomField>