src/core-crm/objects/Student_Sanction__c/fields/Sanction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Reason__c</fullName>
    <description>The description of the Sanction the student was issued</description>
    <label>Sanction Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>