src/core-crm/objects/Student_Sanction__c/fields/Sanction_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Reason_Code__c</fullName>
    <description>The Code for the reason the student was sanctioned for</description>
    <label>Sanction Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>