src/core-crm/objects/Student_Sanction__c/fields/Sanction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Start_Date__c</fullName>
    <description>The date the sanction came to effect</description>
    <label>Sanction Start Date</label>
    <type>Date</type>
</CustomField>