src/core-crm/objects/Student_Sanction__c/fields/Sanction_Type__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Type__c</fullName>
    <description>The type of the Sanction</description>
    <label>Sanction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student Sanction</fullName>
            </value>
            <value>
                <fullName>Student Program Sanction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>